--- a/report_1/samplepaper.tex
+++ b/report_1/samplepaper.tex
@@ -3,7 +3,7 @@
 \usepackage{graphicx}
 \usepackage{apacite}
 \usepackage{float}
-
+\usepackage{listings}
 \begin{document}
 
 \title{Programming Assignment 1}
@@ -40,16 +40,52 @@ The heart of our crawler is the class Worker which implements all the functional
 \subsection{Supporting data structures}
 \begin{itemize}
   \item The \textit{frontier} queue is the most important supporting data structure. It is implemented using the \textit{Multiprocessing.queue()} class which is thread safe. Workers use it as the main source of new URLs to visit. It contains URLs in a basic canonized \textit{string} form.
-  \item \textit{visited\_dict}
-  \item \textit{site\_domains}
-  \item \textit{documents\_dict}
+  \item The \textit{visited\_dict} dictionary contains URLs in a canonical \textit{string} form that have passed all checks and will be visited in the future or have already been visited. It's main function is to assess whether our crawler has seen this URL before or not. It is implemented with the \textit{multiprocessing.Manager()} dictionary class which is thread safe.
+  \item The \textit{site\_domains} dictionary contains key value pairs of domain names and robot parser objects. We use it to check if we've already seen the root domain of the site we're taking from the \textit{frontier}. In case we have we simply get our acquired robots parser object which has already been initialized on the site's robots.txt file. On the contrary if the root domain hasn't been seen before we map it to the corresponding robots parser object. It is implemented with the same class as \textit{visited\_dict}.
+  \item The \textit{documents\_dict} dictionary contains hashes in \textit{string} form of already parsed html documents. It serves as a very basic mechanism to keep our crawler from parsing sites which have a different URL but the very same contents. It is implemented with the same class as \textit{visited\_dict}.
 \end{itemize}
 
 \subsection{Worker class}
+\begin{lstlisting}
+CODE SAMPLE
+import numpy as np
+ 
+def incmatrix(genl1,genl2):
+    m = len(genl1)
+    n = len(genl2)
+    M = None #to become the incidence matrix
+    VT = np.zeros((n*m,1), int)  #dummy variable
+ 
+    #compute the bitwise xor matrix
+    M1 = bitxormatrix(genl1)
+    M2 = np.triu(bitxormatrix(genl2),1) 
+ 
+    for i in range(m-1):
+        for j in range(i+1, m):
+            [r,c] = np.where(M2 == M1[i,j])
+            for k in range(len(r)):
+                VT[(i)*n + r[k]] = 1;
+                VT[(i)*n + c[k]] = 1;
+                VT[(j)*n + r[k]] = 1;
+                VT[(j)*n + c[k]] = 1;
+ 
+                if M is None:
+                    M = np.copy(VT)
+                else:
+                    M = np.concatenate((M, VT), 1)
+ 
+                VT = np.zeros((n*m,1), int)
+ 
+    return M
+\end{lstlisting}
 
+\subsubsection{Subsection test}
 
+\section{Database}
 
+\section{Crawling statistics}
 
+\section{Conclusion}
 
  \bibliographystyle{apacite}
  
