added subsubsections to worker

--- a/report_1/samplepaper.tex
+++ b/report_1/samplepaper.tex
@@ -46,7 +46,22 @@ The heart of our crawler is the class Worker which implements all the functional
 \end{itemize}
 
 \subsection{Worker class}
+describe general flow here
+\subsubsection{Init}
+\subsubsection{Call}
+\subsubsection{Get\_chrome\_driver}
+\subsubsection{Parse\_robots}
+\subsubsection{Parse\_url}
+\subsubsection{Fetch\_url}
+\subsubsection{Parse\_page\_content}
+\subsubsection{Dequeue\_url}
+
+
 \begin{lstlisting}
+
+
+
+
 CODE SAMPLE
 import numpy as np
  
@@ -79,7 +94,7 @@ def incmatrix(genl1,genl2):
     return M
 \end{lstlisting}
 
-\subsubsection{Subsection test}
+
 
 \section{Database}
 
