--- a/report_1/samplepaper.tex
+++ b/report_1/samplepaper.tex
@@ -37,26 +37,24 @@ A web crawler is surely one of the most interesting pieces of software we can wr
 Our main file \textit{web\_crawler.py} takes as an argument the number of desired worker threads. If no argument is given it defaults to 4. The list \textit{sites} contains the four starting sites as given in the instructions as well as the others chosen by us at random but in consideration to how related they are to the first five. All of the sites are immediately put into our \textit{frontier} queue. The starting arguments are then parsed and the individual worker threads initialized with the \textit{ThreadPoolExecutor} and \textit{submit\_worker} functions. All workers are contained in the list \textit{futures} which with the help of the function \textit{wait} ensures that the program exits when none of the running workers are able to get a new URL from the \textit{frontier} queue.
 The heart of our crawler is the class Worker which implements all the functionalities of one worker thread. In previous versions of our crawler workers were supported by a set of data structures however this has since been changed so that all of the data is stored directly in the database. This makes the crawling process considerably easier and more practical as it can be shut down and resumed at anytime on one or multiple machines.
 
-\subsection{Supporting data structures}
-\begin{itemize}
-  \item The \textit{frontier} queue is the most important supporting data structure. It is implemented using the \textit{Multiprocessing.queue()} class which is thread safe. Workers use it as the main source of new URLs to visit. It contains URLs in a basic canonized \textit{string} form.
-  \item The \textit{visited\_dict} dictionary contains URLs in a canonical \textit{string} form that have passed all checks and will be visited in the future or have already been visited. It's main function is to assess whether our crawler has seen this URL before or not. It is implemented with the \textit{multiprocessing.Manager()} dictionary class which is thread safe.
-  \item The \textit{site\_domains} dictionary contains key value pairs of domain names and robot parser objects. We use it to check if we've already seen the root domain of the site we're taking from the \textit{frontier}. In case we have we simply get our acquired robots parser object which has already been initialized on the site's robots.txt file. On the contrary if the root domain hasn't been seen before we map it to the corresponding robots parser object. It is implemented with the same class as \textit{visited\_dict}.
-  \item The \textit{documents\_dict} dictionary contains hashes in \textit{string} form of already parsed html documents. It serves as a very basic mechanism to keep our crawler from parsing sites which have a different URL but the very same contents. It is implemented with the same class as \textit{visited\_dict}.
-\end{itemize}
-
 \subsection{Worker class}
-describe general flow here
-\subsubsection{Init}
-\subsubsection{Call}
-\subsubsection{Get\_chrome\_driver}
-\subsubsection{Parse\_robots}
+
+\subsubsection{Dequeue\_url}
+is called on each worker and contains a while loop that terminates only when there are no more found urls to visit. Each worker gets a \textit{retry\_count} value of 50 which indicates after how many failed attempts at accessing an empty frontier it will cease to run. After each failed attempt the counter is decremented and the worker is forced to sleep for 10 seconds. In the event of a successfully acquired result the corresponding page's status is changed to "IN PROGRESS" to indicate that it is being processed. Afterwards the worker calls \textit{parse\_url(url, is\_binary)} and gives it the url and boolean value whether or not the contents are binary. 
+
 \subsubsection{Parse\_url}
+takes as arguments the url in a \textit{string} format and a boolean indicating if the url is binary or not. The url is converted into a canonical form and a number of different if statements are ran.
+\begin{itemize}
+\item If the url contents are binary just the site id is fetched with the function \textit{site\_id\_for\_domain}.
+\item Alternatively the function \textit{parse\_robots} is executed which returns a site id and a \textit{robots\_parser} object.
+\end{itemize}
+Afterwards the \textit{robots\_parser} object is called and if it exists we check the desired crawl delay and make the worker sleep for as many seconds as it orders us to. If no such delay exists or we haven't managed to initialise the object we decided to implement a default 4 second delay before continuing. After the crawl delay is over the function \textit{fetch\_url} is called with the url, site id, the information if the contents are binary and the \textit{robot\_parser} object as arguments.
+
 \subsubsection{Fetch\_url}
 takes as it's arguments a url string representing the url of the site to be fetched, it's  \textit{id}, a boolean value is\_binary and the appropriate robots file parser. Afterwards a request is sent to the url which depending on the outcome can raise an exception or not. If no exception is raised a series of if statements handle which type of response we're dealing with. 
 \begin{itemize}
   \item We check if the url contains a file that we can download. This is done with our \textit{should\_download\_and\_save\_file(url)} function. Alternatively we check the headers of the response if the file is of type \textit{msword}, \textit{powerpoint}, \textit{wordprocessingml.document} or \textit{presentationml.presentation}. In this case the \textit{save\_file} function is called with the url and response as arguments.
-  \item If the boolean value (\textit{is\_binary}) is binary or if the content type is \textit{image} the \textit{save\_image} function is ran with the url and response as arguments.
+  \item If the boolean value (\textit{is\_binary}) is true or if the content type is \textit{image} the \textit{save\_image} function is ran with the url and response as arguments.
   \item If the response is of type \textit{text\textbackslash html} we attempt to render the page with the Selenium library. Since we have not figured out a practical way to make the library process already received responses we have to send another response to the url with the same library which then gets stored and the function \textit{parse\_page\_content(site\_id, url, status\_code, datetime.datetime.now(), robots)} is ran. If we get an error while rendering we update the status of the page in our database to 500 as most likely the site does not allow us to render it with Selenium.
   \item If the content type is something else the url is removed from the database with the \textit{remove\_page(url, datetime.datetime.now())} function.
 \end{itemize}
@@ -79,8 +77,6 @@ After these initial steps we begin the process of parsing the page.
 \item how we fetch buttons
 \item Images are collected in a similar fashion by searching for the \textit{img} tag with BeautifulSoup. We then check if the links are valid and have not already been visited. In such a case we add them to the frontier however there have been cases when the links were invalid however the files could still be obtained by turning the links into their canonical form. A special few if statements are added at the end to handle such cases.
 \end{itemize}
-\subsubsection{Dequeue\_url}
-
 
 \begin{lstlisting}
 
